--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   <main class="my-5 mx-5">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 align-content-center">
-          <img class="img-fluid rounded-2 mx-auto d-block rounded-circle" src="img.jpg" alt="">
+        <div class="col-lg-3 col-align-content-center">
+          
+          <img class="img-fluid rounded-2 mx-auto d-block rounded-circle " src="img.jpeg" alt="">
           <figure class="name text-center">
 
             <h3>Muhammad Hamza Aziz</h3>
@@ -35,7 +36,7 @@
           <div class="contact-info">
 
             <ul class="list-unstyled ">
-              <!--pt-3 pl-3 my-1 -->
+              
               <li class="my-lists align-content-">
                 <i class="fa-solid fa-phone "></i>
                 03334232680
