--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/37dc23c854.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  </head>
 </head>
 
 <body>
   <main class="my-5 mx-5">
-    <div class="container">
+    <div class="container rounded">
       <div class="row">
         <div class="col-lg-3 col-align-content-center">
           
