--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </h3>
           <div class="row">
           <div class="contact-info text-uppercase">
-            <ul class="list-unstyled ">
+            <ul class="list-unstyled pr-3 ">
               <li class="text-center">Programming</li>
               <li class="text-center">Gaming</li>
               <li class="text-center">Cricket</li>
