--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,10 +15,8 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/37dc23c854.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  </head>
+    <script src="jQuery.js"></script>
 </head>
 
 <body>
@@ -33,7 +30,7 @@
           <figure class="name text-center">
 
             <h3>Muhammad Hamza Aziz</h3>
-            <p class="programme my-3">Software Engineer</>
+            <p class="programme my-3">Software Engineer</head>
               <hr class="line">
           </figure>
           <h3 class="my-interest">
@@ -148,7 +145,7 @@
         <div class="right-container col-xl-9 p-5">
           <p class="headings">About me
           </p>
-          <p class="about-section">
+          <p class="about-section" id="about">
             Software Engineer with fundamental knowledge of software design, development, and testing. Seeking to
             utilize broad
             educational background with excellent analytical, technical, and programming skills to thrive as an
@@ -169,7 +166,7 @@
 
           <p class="headings">Experience</p>
           <div class="row">
-            <div class="col-sm-6 exp-title">
+            <div class="col-sm-6 exp-title" id="exp">
               <h3 class="heading fiverr">Fiverr</h3>
               <h6 class="pl-5">2021 - Present</h6>
             </div>
@@ -199,7 +196,7 @@
 
           <div class="row">
             <h4 class="headings-edu">Education</h4>
-            <div class="col-md-6 edu-div">
+            <div class="col-md-6 edu-div" id="edu">
               
               <h4 class="heading edu-heading">Allied School</h4>
               <h6 class="pl-5">2015-2017</h6>
@@ -248,6 +245,7 @@
     </div>
     </div>
   </main>
+  
 </body>
 
 </html>
