--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/37dc23c854.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
@@ -153,7 +152,7 @@
         <div class="right-container col-xl-9 p-5">
           <p class="headings">About me
           </p>
-          <p class="about-section" id="about">
+          <p class="about-section fadeinleft" >
             Software Engineer with fundamental knowledge of software design, development, and testing. Seeking to
             utilize broad
             educational background with excellent analytical, technical, and programming skills to thrive as an
@@ -178,7 +177,7 @@
               <h3 class="heading fiverr">Fiverr</h3>
               <h6 class="pl-5">2021 - Present</h6>
             </div>
-            <div class="col-sm-6 exp-gd">
+            <div class="col-sm-6 exp-gd fadeinleft">
               <h4 class="heading-s">
                 Game Developer
               </h4>
@@ -191,7 +190,7 @@
               <h3 class="heading upwork">Upwork</h3>
               <h6 class="pl-5">2020 - 2021</h6>
             </div>
-            <div class="col-sm-6 exp-disc">
+            <div class="col-sm-6 exp-disc fadeinleft">
 
               <h4 class="heading-s">
                 Java Developer
