--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
               <hr class="line">
           </figure>
           <div class="text-center my-4">
-            <button type="button" class="btn btn-info">Hire Me</button>
+
+            <a href="mailto:hamzaaaziz001@gmail.com" target="_blank"><button type="button" class="btn btn-info"> Hire
+                Me</button></a>
           </div>
           <div class="move"></div>
           <h3 class="my-interest">
@@ -152,7 +154,7 @@
         <div class="right-container col-xl-9 p-5">
           <p class="headings">About me
           </p>
-          <p class="about-section fadeinleft" >
+          <p class="about-section fadeinleft">
             Software Engineer with fundamental knowledge of software design, development, and testing. Seeking to
             utilize broad
             educational background with excellent analytical, technical, and programming skills to thrive as an
