--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
     integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
@@ -15,7 +16,6 @@
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/37dc23c854.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
@@ -131,12 +131,17 @@
             Interests
           </h3>
           <div class="row">
-            <div class="contact-info text-uppercase">
+            <div class="contact-info text-uppercase text-center">
               <ul class="list-unstyled pr-3 ">
-                <li class="text-center">Programming</li>
-                <li class="text-center">Gaming</li>
-                <li class="text-center">Cricket</li>
-                <li class="text-center">Movies/Seasons</li>
+                <li><i class="fa-solid fa-code icon"></i>Programming</li>
+                <li>
+                  <i class="fa-brands fa-xbox icon"></i>
+                  Gaming
+                </li>
+                <li>
+                  <i class="fa-solid fa-baseball icon"></i> Cricket
+                </li>
+                <li><i class="fa-solid fa-clapperboard icon"></i>Movies/Seasons</li>
                 <li></li>
                 <li></li>
                 <li></li>
