--- a/index.html
+++ b/index.html
@@ -127,34 +127,7 @@
               </li>
             </ul>
           </div>
-          <h3 class="my-interest">
-            Interests
-          </h3>
-          <div class="row">
-            <div class="contact-info text-uppercase text-center">
-              <ul class="list-unstyled pr-3 ">
-                <li><i class="fa-solid fa-code icon"></i>Programming</li>
-                <li>
-                  <i class="fa-brands fa-xbox icon"></i>
-                  Gaming
-                </li>
-                <li>
-                  <i class="fa-solid fa-baseball icon"></i> Cricket
-                </li>
-                <li><i class="fa-solid fa-clapperboard icon"></i>Movies/Seasons</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-
-              </ul>
-            </div>
-          </div>
+         
         </div>
         <div class="right-container col-xl-9 p-5">
           <p class="headings">About me
@@ -219,7 +192,7 @@
               <h4 class="heading-mt">
                 Matric
               </h4>
-              <p class="edu-discription">
+              <p class="edu-discription fadeinleft">
                 Done Matric in computer science and got brilliant result in my subjects.
               </p>
             </div>
@@ -231,7 +204,7 @@
               <h4 class="heading-mt">
                 ICS
               </h4>
-              <p class="edu-discription">
+              <p class="edu-discription fadeinleft">
                 Passed Intermediate in Computer Science from Punjab Group of Colleges.
               </p>
             </div>
@@ -243,19 +216,31 @@
               <h4 class="heading-mt">
                 Software Engineeering
               </h4>
-              <p class="edu-discription">
+              <p class="edu-discription fadeinleft">
                 Currently completing my bachelor's in Software Engineering from COMSATS University Lahore.
               </p>
             </div>
 
           </div>
-
+          <h3 class="headings my-5">
+            Interests
+          </h3>
+          <div class="row">
+            <div class="hobbies text-uppercase text-center fadeinleft">
+              <ul class="list-unstyled">
+                <li class="pb-3"><i class="fa-solid fa-code icon"></i>Programming</li>
+                <li class="pb-3">
+                  <i class="fa-brands fa-xbox icon"></i>
+                  Gaming
+                </li>
+                <li class="pb-3">
+                  <i class="fa-solid fa-baseball icon"></i> Cricket
+                </li>
+                <li class="pb-3"><i class="fa-solid fa-clapperboard icon"></i>Movies/Seasons</li>         
+              </ul>
+            </div>
+          </div>
         </div>
-
-
-
-
-
       </div>
     </div>
   </main>
