--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FA19-BSE-001_Quiz 1</title>
+  <!-- Stylesheets -->
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
     integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Script -->
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
@@ -22,13 +26,10 @@
 
 <body>
   <main class="main">
-
-
     <div class="container-md rounded">
+      <!-- Left content -->
       <div class="row ml-2 mr-2">
-
         <div class=" left-container col-xl-3">
-
           <img class="img-fluid rounded-2 mx-auto d-block rounded-circle " src="img.jpeg" alt="">
           <figure class="name text-center">
 
@@ -129,6 +130,7 @@
           </div>
          
         </div>
+        <!-- Right Content -->
         <div class="right-container col-xl-9 p-5">
           <p class="headings">About me
           </p>
